<resources>
    <string name="app_name">012</string>
    <dimen name="smallTextSize">30sp</dimen>
    <dimen name="bigTextSize">40sp</dimen>
    <color name="menu_background" type="color">#2F3437</color>  <!--ALL APP BACKGROUND COLOR-->
    <string name="how_to_play_reminder_title">How To Play</string>
    <string name="how_to_play_reminder">
Three adjacent tiles of the same color in a row or column isn’t allowed.\n\n
Rows and columns must have an equal number of each color.\n\n
No two rows and no two columns can be the same.\n\n
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="sign_in">Click to sign in</string>
    <string name="about">012 is a little logic game developed by computer science students at the Holon Institute of Technology, HIT.</string>
    <string name="aboutHeadLine">About</string>
    <string name="settings_logout_button">Sign Out</string>
    <string name="placeholder">Loading…</string>
    <string name="message">hey</string>
    <string name="Choose_board_size">Choose board size:</string>
    <string name="hint_board_full">Board is full</string>
    <string name="hint_3_color">Three of the same color are not allowed orthogonally.</string>
    <string name="hint_col_count">Column have an equal amount of each color.</string>
    <string name="hint_row_count">Row have an equal amount of each color.</string>
    <string name="hint_unique_col">No two columns are the same.</string>
    <string name="hint_unique_row">No two rows are the same.</string>
    <string name="hint_dead_end">Pfff… what a mess :(</string>
    <string name="undo_stack_emp">You still didn’t make any move</string>
    <string name="choose_size_free_play">Free game</string>
    <string name="choose_size_daily_play">Daily Challenge</string>
    <string name="win_great">Great!</string>
    <string name="win_good_job">Good Job!</string>
    <string name="win_excellent">Excellent!</string>
    <string name="win_amazing">Amazing!</string>
    <string name="lose_next_time">Maybe next time..</string>
    <string name="lose_not_good">Not good enough…</string>
    <string name="lose_practice">Practice is the key</string>
    <string name="new_game">New Game</string>
    <string name="score">Score: %1$d</string>
    <string name="high_score">Your High Score: %1$d</string>


    <string name="menu_free_game">Free Game</string>
    <string name="menu_daily_game">Daily Challenge</string>
    <string name="settings_choose_language">Choose language:</string>
    <string name="settings_choose_theme">Choose theme:</string>
    <string name="settings_lang_he">HE</string>
    <string name="settings_lang_en">EN</string>
    <string name="settings_header">Settings</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_save">Save</string>
    <string name="back">Back</string>
    <string name="about_us">About us</string>
    <string name="in_game_timer">In-game Timer</string>
    <string name="high_score_beat">New High Score!</string>
    <string name="welcome_button">Welcome %1$s! Enter Here</string>

    <string name="demo_msg_1">We’re going to fill the grid.
        Tap the tile to make it orange.</string>
    <string name="demo_msg_2">Excellent!
        Tap twice to turn a tile blue.</string>
    <string name="demo_msg_3">Three orange tiles next to each other in a row aren’t allowed.</string>
    <string name="demo_msg_4">Never have three blue tiles together in a row either.</string>
    <string name="demo_msg_5">Three orange or blue tiles below each other is invalid too!</string>
    <string name="demo_msg_6">A full row must have as many orange tiles as it has blue ones.</string>
    <string name="demo_msg_7">Columns have an equal number of each color too.</string>
    <string name="demo_msg_8">You should be able to know what color this one is…</string>
    <string name="demo_msg_9">No two rows and no two columns are the same.</string>
    <string name="demo_msg_10">You know what to do…</string>
    <string name="demo_end_msg">Yay! Good job! Now let\'s go play</string>
    <string name="board_size_title">Board Size: %1$d</string>
    <string name="high_score_list_title">Leaderboard</string>
</resources>



