<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/options_menu"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_header"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="15dp"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_notifications"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/settings_notifications_enabled"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_sound"
        android:id="@+id/settings_sound_enabled"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="5dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_choose_language"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginBottom="15dp"
        android:layout_margin="10dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio_group_language"
        android:gravity="center"
        >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/settings_lang_hebrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_lang_he"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="25dp"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/settings_lang_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_lang_en"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="25dp"
            />
    </RadioGroup>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_choose_theme"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_margin="10dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio_group_color_theme"
        android:gravity="center"

    >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/settings_color_theme_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_colortheme1"
            android:layout_marginHorizontal="25dp"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/settings_color_theme_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_colortheme2"
            android:layout_marginHorizontal="25dp"
            />
    </RadioGroup>

    <Button
        android:id="@+id/logout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_logout_button"

        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_color_theme"

        android:layout_gravity="center"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/settings_save"
    android:onClick="exitSettings"
    android:textAlignment="center"
    android:textSize="25sp"/>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>